@@ -1,3 +1,7 @@
+2005-09-11  Zoltan Varga  <vargaz@gmail.com>
+
+	* ia64/ia64-codegen.h (ia64_unw_pop_frames): New unwind macro.
+
 2005-09-10  Zoltan Varga  <vargaz@gmail.com>
 
 	* ia64/ia64-codegen.h: Remove 'manual' emitting of instructions. 
